[package]
name = "mdbook-html"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "An alternate HTML backend for mdbook."

[dependencies]
mdbook = "0.3.5"
log = "0.4.8"
serde = "1.0.102"
serde_derive = "1.0.102"
handlebars = "2.0.2"
thiserror = "1.0.5"
rayon = "1.2.0"
pulldown-cmark = "0.6.1"
structopt = "0.3.4"
env_logger = "0.7.1"
dunce = "1.0.0"
serde_json = "1.0.41"
include_dir = "0.4.1"
